# cookiecutter_pytorch_cmake

./: CONTRIBUTING.rst  README.md  README.rst  cookiecutter.json
{{ cookiecutter.repo_name }}/: CMakeLists.txt  README.rst
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/data/: CMakeLists.txt
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/data/include/: mnist.hpp
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/data/src/: mnist.cpp
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/models/: CMakeLists.txt
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/models/include/: mlp.hpp
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/models/src/: mlp.cpp
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/runner/: train.cpp
